# adventofcode2020

./: .gitignore  pyproject.toml
adventofcode/: advent1.py  advent2.py  advent3.py  advent4.py  advent5.py  advent6.py  advent7.py  advent8.py  advent9.py
tests/: conftest.py  test_advent1.py  test_advent2.py  test_advent3.py  test_advent4.py  test_advent5.py  test_advent6.py  test_advent7.py  test_advent8.py  test_advent9.py
